--- a/src/PlanIt/TransportationBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/TransportationBundle/Resources/public/css/general.scss
@@ -19,6 +19,11 @@ $row-list: #f1f1f1;
 .modal-body {
 	input[type="submit"] {
 		background-color: $color;
+		&:hover {
+			background-color: darken($color, 5%);
+		}
 	}
 }
+
+
 
