--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -165,17 +165,17 @@ input{
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 0px) { 
-	#map_canvas { position:relative;width: 100%; height: 200px; } 
+	.map_canvas { position:relative;width: 100%; height: 200px; } 
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
-	#map_canvas { width: 50%; height: 200px; } 
+	.map_canvas { width: 50%; height: 200px; } 
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
-	#map_canvas { width: 40%; height: 200px; } 
+	.map_canvas { width: 400px; height: 200px; } 
 }
 
 
