--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 <div class="container">
 	<div class="row" id="title">
         <div class="col-md-10"> <h1>{{'place'|trans}}</h1> </div>
@@ -74,7 +74,7 @@
 			                </div>
 			        	</p>
 			    	</div>
-			    	<div class="col-lg-5 col-md-6 col-sm-12" id="map_canvas_{{place.id}}">
+			    	<div class="col-lg-5 col-md-6 col-sm-12 map_canvas" id="map_canvas_{{place.id}}">
 			    	</div>
 
 			    </div>
@@ -110,6 +110,6 @@
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
     <script>accordeonPlace();</script>
-    <script>initializeMap(1);</script>
+    <script>getPlaces({{module.id}});</script>
     <script>places();</script>
 {% endblock %}
