--- a/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
@@ -15,7 +15,8 @@
 	<div class="modal fade modal-ok" id="okModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                OK
+                <img src="/images/modal-ok.png"/>
+                Modifications enregistrées	
             </div>
         </div>
     </div>
