--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -158,12 +158,16 @@ button {
 
 .modal-ok{
     .modal-content{
+      img{
+        margin-right: 10px;
+      }
       margin-left: auto;
       margin-right: auto;
       margin-top: 20%;
-      width: 70px;
-      height: 70px;
-      padding: 25px;
+      width: 60% !important;
+      padding:15px !important;
+      border: none;
+      text-align: center;
     }
 
     .modal-backdrop{
