--- a/src/PlanIt/PlaceBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/general.scss
@@ -25,3 +25,12 @@ $row-list: #f1f1f1;
 	}
 }
 
+.modal.validate {
+	button {
+		&#delete_confirm_place:before{
+	      background-position: 50% -104px;
+	      background-size: 92%;
+    	}
+	}
+}
+
