--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -84,7 +84,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel_deleteItem"></h4>
+                    <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                    <h4 class="modal-title" id="myModalLabel_deleteItem"></h4>
                 </div>
                 <div class="modal-body row">
                     <button id="delete_confirm_item" class="btn btn-default col-md-6"> {{'yes'|trans}} </button>
@@ -99,7 +100,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel_deleteList"></h4>
+                    <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                    <h4 class="modal-title" id="myModalLabel_deleteList"></h4>
                 </div>
                 <div class="modal-body row">
                     <button id="delete_confirm_list" class="btn btn-default col-md-6"> {{'yes'|trans}} </button>
