--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -220,7 +220,8 @@
 						    <div class="modal-dialog">
 						        <div class="modal-content">
 						            <div class="modal-header">
-						            <h4 class="modal-title" id="myModalLabel_deleteExpense"></h4>
+						            	<button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+						            	<h4 class="modal-title" id="myModalLabel_deleteExpense"></h4>
 						            </div>
 						            <div class="modal-body row">
 						                <button id="delete_confirm_expense" class="btn btn-default col-md-6"> {{'yes'|trans}} </button>
