--- a/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/GuestsBundle/Resources/public/css/general.scss
@@ -34,18 +34,10 @@ $header: #f1f1f1;
 
 .modal.validate {
 	button {
-		background: url("/images/utils.png") no-repeat;
-		width: 50%;
-		height: 87px;
-		display: inline-block;
-		background-size: 17%;
-		padding-top: 71px;
-		font-size: 13px;
-		border: none;
-		background-position: 50% -1px;
-		&#delete_cancel {
-			background-position: 50% -142px;
-			background-size: 20%;
-		}
+		&#delete_confirm_guest:before,
+		&#delete_confirm_typeguest:before {
+	      background-position: 50% -35px;
+	      background-size: 92%;
+    	}
 	}
 }
