--- a/src/PlanIt/GuestsBundle/Resources/views/PaymentMeans/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/PaymentMeans/form.html.twig
@@ -1,6 +1,7 @@
 <div class="modal fade addPaymentMeansModal" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+                <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <div class="modal-header">
                 <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <h4 class="modal-title" id="myModalLabel">{{'add_payment' |trans}}</h4>
