--- a/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
@@ -80,6 +80,7 @@
 		<div class="modal fade deleteTransportationModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
 		    <div class="modal-dialog">
 		        <div class="modal-content">
+		        	<button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
 		            <div class="modal-header">
 		            <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
 		            <h4 class="modal-title" id="myModalLabel_deleteTransportation"></h4>
