--- a/src/PlanIt/UserBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/UserBundle/Resources/public/css/general.scss
@@ -180,7 +180,7 @@ button {
   .modal-dialog {
     width: 300px;
     position: initial;
-    margin: 200px auto;
+    margin: 10% auto;
   }
   button.btn {
     background-color: inherit;
