input text plus gros pour long placeholder

--- a/src/PlanIt/BudgetBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/BudgetBundle/Resources/public/css/general.scss
@@ -64,3 +64,15 @@ $color: #847299;
 		}
 	}
 }
+
+.addExpenseModal {
+	#expense_form {
+		width : 100%;
+		div {
+			width : 100%;
+			input {
+				width : 50%;
+			}
+		}
+	}
+}
