--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -34,7 +34,7 @@
 							<ul class="tab">
 								<li><a class="first_onglet" id="tab-general" href="#section-topline-general" onclick="document.getElementById('expense-menu').style.display='none';"><span>{{'recap'|trans}}</span></a></li>
 								<li id="tab-apports" class="pull-right"><a href="#section-topline-apports" onclick="document.getElementById('expense-menu').style.display='none';"><span>{{'inflows'|trans}}</span></a></li>
-								<li id="tab-depenses"><a href="#section-topline-depenses" class="last_onglet" onclick="document.getElementById('expense-menu').style.display='block';"><span>{{'depenses'|trans}}</span></a></li>			
+								<li id="tab-depenses"><a href="#section-topline-depenses" class="last_onglet" onclick="document.getElementById('expense-menu').style.display='block';"><span>{{'expenses'|trans}}</span></a></li>			
 								
 
 								<div class="modal fade deleteTypeExpenseModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
