--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -18,7 +18,7 @@
     </div>
 	<div class="row buttons">
         <div class="col-md-3 bt_todo"><button data-toggle="modal" data-target=".addListModal">{{'add_tasklist'|trans}}</button></div>
-        <div class="col-md-3 bt_todo"><a href="{{ path('PlanItTodoBundle_pdf', { 'module_id': module.id }) }}"><button>{{'print'|trans}}</button></a></div>
+        <div class="col-md-3 bt_todo"><a href="{{ path('PlanItTodoBundle_pdf', { 'module_id': module.id }) }}"><button>{{'print_task'|trans}}</button></a></div>
 
 
         <!--<div class="col-md-3 bt_todo"><button>Valider</button></div>-->
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="accordion-body">
-        	<ul>
+        	<ul class="todo-list">
     		    {% for item in list.items %}
     				{% if not item.checked %}
     					<li id="blockitem-{{item.id}}">						
@@ -60,11 +60,13 @@
     			{% for item in list.items %}
     				{% if item.checked %} 
     					<li id="blockitem-{{item.id}}">
-    						<div class="row">
     							<div class="col-md-12 todo checked">
-    								{{item.content}} <input type="checkbox" id="checkbox-{{item.id}}" checked name="todo1" onClick="changeChecked({{item.id}},'{{item.content}}')"> 
+    								 <input type="checkbox" id="checkbox-{{item.id}}" checked name="todo1" onClick="changeChecked({{item.id}},'{{item.content}}')"> 
+                                     {{item.content}}
+                                     <div class="pull-right" >
+                                        <div class="delete-checked" data-toggle="modal" data-target=".deleteItemModal" data-content="{{item.content}}" data-id="{{item.id}}"></div>  
+                                    </div>
     							</div>
-    						</div>			
     					</li>
     				{% endif %}
     			{% endfor %}
