--- a/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
+++ b/src/PlanIt/PlaceBundle/Resources/public/css/place.scss
@@ -9,9 +9,17 @@ input{
 	padding: 2px 5px;
 }
 
-.selectize-input{
-	width: 30% !important;
+#state_place {
+	#state_label {
+		float:left;
+		margin-right: 10px;
+	}
+	.selectize-input{
+		width: 40% !important;
+	}
 }
+
+
 
 .bt_place{
 	button{
@@ -30,12 +38,22 @@ input{
 }
 
 .img_place{
-	height: 200px;
+	height: 215px;
 	margin-bottom: 20px;
 	background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     position: relative;
+    padding : 0;
+    .container-img-place { 
+    	width: 100%; 
+    	height: 161px; 
+    	overflow: hidden;
+    	img {
+    		min-height: 161px;
+    		max-height: 161px;
+    	}
+    }
 }
 
 #bt_img{
@@ -48,6 +66,28 @@ input{
 	}
 	.label_descr{
 		font-weight: bold;
+	}
+}
+
+.address { clear:both;}
+
+.address,
+.remark {
+	margin-top: 20px;
+	span {
+		font-weight : bold;
+	}
+	textarea {
+		border: none;
+		resize: none;
+		width: 90%;
+		vertical-align: top;
+		&:focus {
+			border: solid 1px $neutral;
+			background-color: #FFF !important;
+			color: #000000;
+			outline : none;
+		}
 	}
 }
 
@@ -146,17 +186,27 @@ input{
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 0px) { 
-	.map_canvas { position:relative;width: 100%; height: 200px; } 
+	.map_canvas { 
+		position:relative;
+		//width: 100%; 
+		height: 200px; 
+	} 
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
-	.map_canvas { width: 50%; height: 200px; } 
+	.map_canvas { 
+		//width: 50%; 
+		height: 200px; 
+	} 
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
-	.map_canvas { width: 400px; height: 200px; } 
+	.map_canvas { 
+		//width: 382px; 
+		height: 222px; 
+	} 
 }
 
 
