--- a/src/PlanIt/UserBundle/Resources/views/Page/login.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/login.html.twig
@@ -6,7 +6,9 @@
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-
+<a href="{{ path('PlanItUserBundle_register') }}">
+                    Inscription
+                </a>
 <form action="/app_dev.php/api/logins" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
@@ -15,9 +17,6 @@
 
     <label for="password">{{ 'security.login.password'|trans }}</label>
     <input type="password" id="password" name="password" required="required" />
-
-    <input type="checkbox" id="remember_me" name="remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
