--- a/src/PlanIt/UserBundle/Resources/views/Page/register.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/register.html.twig
@@ -1,6 +1,9 @@
 {% extends "PlanItUserBundle::layout-login.html.twig" %}
 {% block fos_user_content %}
-<form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
+<a href="{{ path('PlanItUserBundle_login') }}">
+                    Connexion
+                </a>
+<form action="{{ path('PlanItUserBundle_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
     {{ form_widget(form) }}
     <div>
         <input type="submit" value="{{ 'registration.submit'|trans }}" />
